--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,33 @@
+version: '3.9'
 
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: stayfinder_web
-
-    command: python manage.py runserver 0.0.0.0:8000
-    env_file:
-      - .env
+  db:
+    image: mysql:8.0
+    container_name: stayfinder_db
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: stayfinder
+      MYSQL_USER: stayfinder
+      MYSQL_PASSWORD: stayfinder
     ports:
-      - "8000:8000"
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+  web:
+    build: .
+    container_name: stayfinder_web
+    restart: always
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
-    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    env_file:
+      - .env
+
+volumes:
+  mysql_data:
