--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,39 @@
+# --- Core Framework ---
 Django==5.0.6
 djangorestframework==3.15.2
 django-filter==24.2
+django-cors-headers==4.3.1
+
+# --- API Docs / Swagger ---
+drf-spectacular==0.27.2
+drf-yasg==1.21.7
+
+# --- Database (MySQL) ---
+mysqlclient==2.2.4
 PyMySQL==1.1.1
-python-dotenv==1.0.1
-cryptography>=42
+
+# --- Utilities ---
+python-decouple==3.8
+pytz==2024.1
+tzdata==2024.1
+
+# --- Frontend / Templates ---
+django-crispy-forms==2.1
+crispy-tailwind==0.5.0
+
+# --- Developer Tools ---
+ipython==8.24.0
+black==24.4.2
+isort==5.13.2
+flake8==7.1.1
+
+# --- Testing ---
+pytest==8.3.1
+pytest-django==4.8.0
+factory-boy==3.3.0
+
+# --- Optional (для загрузки изображений) ---
+Pillow==10.3.0
+
+# --- REST Utils ---
+requests==2.32.3
