API Errors and warnings fixed

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 # --- Core Framework ---
-Django==5.0.6
-djangorestframework==3.15.2
-django-filter==24.2
-django-cors-headers==4.3.1
+Django>=5.0.6
+djangorestframework>=3.15.2
+django-filter>=24.3
+drf-spectacular-sidecar>=2025.1.1
+python-dotenv>=1.0.1
 
 # --- API Docs / Swagger ---
-drf-spectacular==0.27.2
+drf-spectacular>=0.27.2
 drf-yasg==1.21.7
 
 # --- Database (MySQL) ---
 mysqlclient==2.2.4
-PyMySQL==1.1.1
+PyMySQL>=1.1.1
 
 # --- Utilities ---
 python-decouple==3.8
